@startuml
skinparam defaultTextAlignment left
[*] --> Client
state Client{
state RUN{
	RUN : entry / do\n  c = rnd() % 100\n  d = rnd() % 100\n  e = rnd() % 100\n  app!m1(a,b,c,d,e)\n  app!m2(a,b,c)\n  counter++\nend


RUN --> STOP : [counter == 100]

RUN --> RUN : e:app?m3[e.a == a]\n


RUN --> ERROR : e:app?m3[e.a != a]

}
state STOP{
	STOP : entry / println "SUCCESS"\n
}
STOP --> [*]
state ERROR{
	ERROR : entry / println "ERROR"\n
}
ERROR --> [*]
[*] --> RUN
	Client : entry / do\n  a = rnd()\n  b = rnd()\nend

}
@enduml
